Worked alot on editing

--- a/TextEditor.cbp
+++ b/TextEditor.cbp
@@ -32,13 +32,16 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/Timer.hpp" />
 		<Unit filename="include/graphics/Color.hpp" />
 		<Unit filename="include/graphics/Drawable.hpp" />
+		<Unit filename="include/graphics/FontRenderer.hpp" />
 		<Unit filename="include/graphics/GraphicsManager.hpp" />
 		<Unit filename="include/graphics/TextEditorWindow.hpp" />
 		<Unit filename="include/text/EditorChar.hpp" />
 		<Unit filename="include/text/SyntaxLanguage.hpp" />
 		<Unit filename="include/text/TextUtils.hpp" />
+		<Unit filename="src/Timer.cpp" />
 		<Unit filename="src/graphics/Color.cpp" />
 		<Unit filename="src/graphics/FontRenderer.cpp" />
 		<Unit filename="src/graphics/GraphicsManager.cpp" />
